重构: Scene 能力方法消除 Game 场景硬编码
Game 里 5 处 instanceof DemoScene/CosmosScene 全部改为向场景询问能力，
新场景接入不再需要改 Game 的判断分支：

- Scene 接口新增 5 个 default 能力方法: wantsMouseCapture /
  usesCrosshairPicking / supportsSaveLoad / getHintLines / drawsCrosshair
- DemoScene 全开（FPS 漫游+准星拾取+存读档），CosmosScene 不锁光标；
  原 drawHud 硬编码提示文案下放为各场景 getHintLines
- Game 新增 SceneSlot 枚举 {SURFACE, COSMOS, DEMO} + createScene 工厂:
  Tab 只在 地表<->宇宙 往返，DEMO 仅经新启动参数 --demo 进入；
  SURFACE 槽暂由 DemoScene 顶替（C2 地表场景下一批接入）
- 行为对照: 默认/--cosmos/--demo 三种启动实跑无异常，
  core 包 instanceof 具体场景类清零

Co-Authored-By: Claude Code <noreply@anthropic.com>